Fix layout with classic (always-visible) scroll bars

--- a/content/main.css
+++ b/content/main.css
@@ -9,7 +9,6 @@ html {
 body {
   margin: 0;
   padding: 0;
-  min-width: 100vw;
   min-height: 100vh;
   background: hsl(50deg, 100%, 99%); /* fallback */
   background: url(/bin/{{ hashverfile('background.svg') }}), hsl(50deg, 100%, 99%) center;
@@ -191,7 +190,8 @@ body.dark .table-of-contents a.hidden-pastel::after { background: hsl(36deg, 9%,
   }
   nav > ul {
     flex-direction: row;
-    overflow: scroll;
+    overflow-x: scroll;
+    overflow-y: hidden;
     margin-block-end: 0;
     transition: box-shadow 0.2s ease;
   }
